gitops/apps/overseerr/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: overseerr
  namespace: apps
spec:
  type: ClusterIP
  selector:
    app: overseerr
  ports:
    - name: http
      port: 5055
      targetPort: 5055
      protocol: TCP
