gitops/apps/overseerr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: overseerr
  namespace: apps
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Media
    gethomepage.dev/name: Overseerr
    gethomepage.dev/icon: overseerr.png
    gethomepage.dev/description: Request manager
    gethomepage.dev/href: "http://overseerr.home.arpa"
spec:
  ingressClassName: traefik
  rules:
    - host: overseerr.home.arpa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: overseerr
                port:
                  number: 5055
